<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:layout_gravity="bottom|center"
  android:id="@+id/fragment_search"
  android:background="#000000"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:padding="4dp"
  tools:context=".controller.DashboardFragment">

  <ImageView
    android:id="@+id/wiki_image"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/bn_capture"


    />

  <Button
    android:id="@+id/bn_capture"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"

    android:textColor="@color/colorAccent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toRightOf="@id/bn_info"
    android:background="@drawable/roundedbutton"
    android:paddingBottom="20dp"

    android:drawableBottom="@android:drawable/ic_menu_camera"



    />

  <Button
    android:id="@+id/bn_info"
    android:layout_width="50dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintRight_toLeftOf="@id/bn_capture"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginBottom="8dp"
    android:paddingLeft="7dp"
    android:drawableStart="@android:drawable/ic_dialog_info"
    android:drawableTint="@color/colorAccent"
    android:background="@android:color/transparent"
    />

  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"

    >


    <TableLayout
      android:id="@+id/tableLayout1"
      android:layout_width="190dp"
      android:layout_height="wrap_content"
      android:paddingTop="15dp"
      >

      <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="right">

        <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Azimuth (z-axis rotation): "
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>

        <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10px"
          android:text="0"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>
      </TableRow>

      <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:textColor="@color/colorAccent">

        <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Pitch (x-axis rotation): "
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>

        <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10px"
          android:text="0"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>

      </TableRow>
      <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:baselineAligned="true"
        >

        <TextView
          android:id="@+id/textView3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Roll (y-axis ritation): "
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>

        <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10px"
          android:text="0"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:textColor="@color/colorAccent"
          android:textSize="13sp"/>

      </TableRow>

      <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
      </TableRow>

    </TableLayout>
    <RadioGroup
      android:id="@+id/radioGroup1"
      android:layout_width="190dp"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:scaleX="0.8"
      android:scaleY="0.8"

      >
      <RadioButton
        android:id="@+id/radio0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="Accelerometer"
        android:textColor="@color/colorAccent"
        android:paddingEnd="10dp"

        />

      <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gyroscope"
        android:textColor="@color/colorAccent"
        android:paddingEnd="10dp"

        />

      <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sensor Fusion"
        android:textColor="@color/colorAccent"
        android:checked="true"
        android:paddingEnd="10dp"

        />

    </RadioGroup>

  </LinearLayout>

</android.support.constraint.ConstraintLayout>