<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="300dp"
  android:layout_height="400dp"
  android:layout_gravity="bottom|left"
  android:background="#FFFFFF"
  >


  <ListView
    android:id="@+id/list_info"
    android:scrollbarStyle="outsideOverlay"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:padding="10dp"
    android:divider="@color/colorAccent"
    android:dividerHeight="10dp"
    android:drawSelectorOnTop="true"
    android:footerDividersEnabled="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <Button
    android:id="@+id/cancel_button_info"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_weight="1"
    android:paddingStart="6dp"
    android:background="@null"
    android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
    android:drawableTint="#FFFFFF"
    android:gravity="center"
    app:layout_constraintRight_toRightOf="parent"


    />


</android.support.constraint.ConstraintLayout>