<?xml version="1.0" encoding="utf-8"?>


<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/navigation_dashboard"
    android:icon="@drawable/ic_dashboard_black_24dp"
    android:title="@string/title_dashboard"
    android:fillColor="@color/nav_icon_color"/>

  <item
    android:id="@+id/navigation_capture"
    android:icon="@drawable/ic_blur_circular"
    android:title="@string/capture"
    android:iconTint="@color/nav_icon_color"/>

  <item
    android:id="@+id/navigation_search"
    android:icon="@drawable/ic_search2"
    android:title="@string/search"
    android:iconTint="@color/nav_icon_color"/>

</menu>
