<resources>
  <string name="app_name">Celestial Bodies</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="search">Search</string>
  <string name="client_id">146420019461-dire3gnmf4cvu51tmr5ectf3k52qm8vc.apps.googleusercontent.com</string>


  <string name="star_format">%d</string>
  <string name="search_hint">Search</string>
  <string name="select_item">Select Item:</string>
  <string name="stars_text">Stars</string>
  <string name="planets_text">Planets</string>
  <string name="meteor_showers_text">Meteor Showers</string>
  <string name="comets_text">Comets</string>
  <string name="sign_in_error">Unable to log in with the provided credentials</string>
  <string name="sign_out">Sign out</string>
  <string name="history">History</string>
  <string name="capture">Capture</string>
  <string name="date_category"><u>Date:</u></string>
  <string name="star_id_category"><u>Star ID:</u></string>
  <string name="star_history"><u>Star History</u></string>
  <string name="star_information"><u>Star Information</u></string>
  <string name="number_category"><u>Number:</u></string>
  <string name="auth_header">Bearer %s</string>
  <string name="betelgeuse"><u>Betelgeuse</u></string>
  <string name="current_stars"><u>Current Stars</u></string>
</resources>
