<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/action_history"
    android:orderInCategory="100"
    android:title="@string/history"
    android:icon="@drawable/ic_history"
    app:showAsAction="ifRoom"
    />

  <item
    android:id="@+id/sign_out"
    android:title="@string/sign_out"
    app:showAsAction="never"/>

</menu>